// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Steps Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-caXVBt efHDjS"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-caXVBt efHDjS"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds esEVfz sc-hHLeRK sc-jmNpzm iKIurY AzTKN fa-layers"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle "
                data-icon="circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512z"
                  fill="currentColor"
                />
              </svg>
              <div
                class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF sc-dUWWNf dvHrZp fa-layers-text fa-inverse"
              >
                2
              </div>
            </div>
            <div
              class="sc-ivTmOn fSbxau sc-cxabCf hcBkUF"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#bbc8d6"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds hdgZGZ sc-hHLeRK sc-jmNpzm iKIurY AzTKN fa-layers"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hsOonA bKKhq"
              />
              <div
                class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF sc-dUWWNf dvHrZp fa-layers-text"
              >
                3
              </div>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps With Custom Title 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD coYthk sc-caXVBt efHDjS"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds GPkRS sc-hHLeRK efXsRo"
      >
        <div
          class="sc-ivTmOn dNJphr sc-cxabCf gvOJna"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-signs-post "
            data-icon="signs-post"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 32H64C46.3 32 32 46.3 32 64v64c0 17.7 14.3 32 32 32H441.4c4.2 0 8.3-1.7 11.3-4.7l48-48c6.2-6.2 6.2-16.4 0-22.6l-48-48c-3-3-7.1-4.7-11.3-4.7H288c0-17.7-14.3-32-32-32s-32 14.3-32 32zM480 256c0-17.7-14.3-32-32-32H288V192H224v32H70.6c-4.2 0-8.3 1.7-11.3 4.7l-48 48c-6.2 6.2-6.2 16.4 0 22.6l48 48c3 3 7.1 4.7 11.3 4.7H448c17.7 0 32-14.3 32-32V256zM288 480V384H224v96c0 17.7 14.3 32 32 32s32-14.3 32-32z"
              fill="currentColor"
            />
          </svg>
        </div>
        <h6
          class="sc-ciZhAO iJFBxw sc-jOrMOR KGDhW"
        >
          Beginners Guide
        </h6>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              These are
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              all completed
            </div>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="sc-ivTmOn dNJphr sc-cxabCf gZNXSJ"
            >
              and not clickable
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Steps Without Borders 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn bxEzyD gXAAKr sc-caXVBt efHDjS"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds kHbOVG sc-hHLeRK cGKEdj"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds eiTTiE sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              Doesn't have
            </a>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds hdgZGZ sc-hHLeRK sc-jmNpzm iKIurY AzTKN"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-circle-check "
                data-icon="circle-check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 512c141.4 0 256-114.6 256-256S397.4 0 256 0S0 114.6 0 256S114.6 512 256 512zM369 209L241 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L335 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              Title or dismiss button
            </a>
          </div>
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds hyjzum sc-hHLeRK efXsRo"
          >
            <svg
              height="9"
              viewBox="0 0 29.4 9"
              width="29.4"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                transform="translate(1.000000, 4.000000)"
              >
                <path
                  d="M20-4c0.1,0,0.2,0,0.2,0.1l0,0l7.9,4c0.3,0.1,0.4,0.5,0.2,0.7c-0.1,0.1-0.1,0.2-0.2,0.2l0,0
			l-8,3.9c-0.3,0.1-0.6,0-0.7-0.2c0-0.1-0.1-0.2-0.1-0.2l0,0l0-3.5l-3.9,0C15.2,1,15,0.8,15,0.5l0-0.1C15,0.2,15.2,0,15.5,0l0,0
			l3.9,0l0-3.5C19.4-3.7,19.6-4,20-4L20-4z M7.5-0.1l4,0c0.3,0,0.5,0.2,0.5,0.5s-0.2,0.5-0.5,0.5l0,0l-4,0C7.2,0.9,7,0.7,7,0.4
			C7,0.1,7.2-0.1,7.5-0.1L7.5-0.1z M-0.5-0.2l4,0C3.8-0.1,4,0.1,4,0.4S3.8,0.9,3.5,0.9l0,0l-4,0C-0.8,0.8-1,0.6-1,0.3
			C-1,0-0.8-0.2-0.5-0.2L-0.5-0.2z"
                  fill="#5b82a7"
                  fill-rule="nonzero"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK fuNPkM"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds eYvdLm sc-hHLeRK kvKuwg"
          >
            <a
              class="sc-eKBdFk eDgBSD sc-bUbCnL aUvHI"
              color="primary.main"
            >
              That's it (no icon)
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
